--- a/src/pages/cadastroUsuario/CadastroUsuario.css
+++ b/src/pages/cadastroUsuario/CadastroUsuario.css
@@ -1,8 +1,4 @@
-.text-decorator-none{
-    text-decoration: none;
-}
-
-.imagem{
+.imagem2{
     background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
     background-repeat: no-repeat;
     width: 100vh;
@@ -11,6 +7,11 @@
     background-position: center;
 }
 
-.text-decorator-none{
-    text-decoration: none;
+
+.textos2{
+    font-weight: bold !important;
+}
+
+.btnCancelar{
+    margin-right: 20px !important;
 }
